--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,24 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/web/**",
+      "src": "build/web/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "handle": "filesystem"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/build/web/assets/$1"
+    },
+    {
+      "src": "/(.+)",
       "dest": "/build/web/$1"
     },
     {
-      "src": "/",
+      "src": "/(.*)",
       "dest": "/build/web/index.html"
     }
   ]
