--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/web/**/*",
+      "src": "build/web/**",
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/build/web/assets/$1"
-    },
-    {
-      "src": "/(.+)",
-      "dest": "/build/web/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/build/web/index.html"
+      "source": "/(.*)",
+      "destination": "/build/web/index.html"
     }
   ]
 } 
