--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/web/**",
+      "src": "build/web/**/*",
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/build/web/index.html"
+      "src": "/build/web/(.*)",
+      "dest": "/build/web/$1"
+    },
+    {
+      "src": "/(.+\\.[a-z]+)$",
+      "dest": "/build/web/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/web/index.html"
     }
   ]
 } 
